--- a/VillageUI/src/app/components/house/house.component.html
+++ b/VillageUI/src/app/components/house/house.component.html
@@ -8,6 +8,32 @@
   <tbody>
     <tr>
       <td>
+
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#createApartmentInsideHouse"
+          (click)="initNewApartment()">
+          Add apartment to this house
+        </button>
+        
+        <!-- createApartmentInsideHouse Modal Window-->
+        <div class="modal fade" id="createApartmentInsideHouse" tabindex="-1" aria-labelledby="createApartmentInsideHouseLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1 class="modal-title fs-5" id="createApartmentInsideHouseLabel">New Apartment Creation Window</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <app-edit-apartment [apartment]="apartmentToEdit" (apartmentUpdated)="updateOneApartment($event)"></app-edit-apartment>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+              </div>
+            </div>
+          </div>
+        </div>
+
         <div class="card mb-3" style="max-width: 540px;">
           <style>
             hr.rounded {
