--- a/VillageUI/src/app/components/edit-apartment/edit-apartment.component.html
+++ b/VillageUI/src/app/components/edit-apartment/edit-apartment.component.html
@@ -25,10 +25,6 @@
     Living Space:
     <input [(ngModel)]="apartment.livingSpace" placeholder="Living space" />
   </div>
-  <!-- <div>
-    Full Area:
-    <input [(ngModel)]="apartment.fullArea" placeholder="Full Area" />
-  </div> -->
   <span style="display: flex; justify-content: space-between">
   <button type="button" class="btn btn-primary" (click)="updateApartment(apartment)" *ngIf="apartment.id">Save changes</button>
   <button *ngIf="theHouseId && !apartment.id" type="button" class="btn btn-outline-success" (click)="createApartmentAndHouseApartment(apartment, theHouseId)">Create</button>
@@ -40,13 +36,11 @@
       <button (click)="deleteButton.close()" class="btn btn-success">
         CANCEL
       </button>
-      <!-- <button (click)="deleteApartment(apartment)" *ngIf="apartment.id" (click)="deleteButton.close()"
-        class="btn btn-danger">Delete</button> -->
       <button (click)="deleteApartmentAndHouseApartment(apartment)" *ngIf="apartment.id"
         (click)="deleteButton.close()" class="btn btn-danger">Delete</button>
     </span>
 
   </dialog>
-  <button (click)="deleteButton.show()" class="btn btn-warning">Del Apartment</button>
+  <button (click)="deleteButton.show()" class="btn btn-warning" *ngIf="apartment.id">Del Apartment</button>
   </span>
 </div>
