--- a/VillageUI/src/app/app.component.html
+++ b/VillageUI/src/app/app.component.html
@@ -12,6 +12,7 @@
   <a routerLink="login">Login</a>
   <a routerLink="register">Register</a>
   <a routerLink="login" style="float: right;" class="menulink">Logout</a>
+  <p>[Name: {{loggedInUserName}}] [Role: {{userRole}}]</p>
 </span>
   <router-outlet></router-outlet>
 </div>
