--- a/VillageUI/src/app/components/register/register.component.html
+++ b/VillageUI/src/app/components/register/register.component.html
@@ -6,23 +6,15 @@
     <form class="example-form" [formGroup]="registerform" (ngSubmit)="proceedregister()">
       <mat-form-field class="example-full-width">
         <mat-label>Username</mat-label>
-        <input matInput formControlName="id">
-      </mat-form-field>
-      <mat-form-field class="example-full-width">
-        <mat-label>Name</mat-label>
-        <input matInput formControlName="name">
+        <input matInput formControlName="username">
       </mat-form-field>
       <mat-form-field class="example-full-width">
         <mat-label>Password</mat-label>
         <input type="password" matInput formControlName="password">
       </mat-form-field>
-      <mat-form-field class="example-full-width">
-        <mat-label>Email</mat-label>
-        <input matInput formControlName="email">
-      </mat-form-field>
-      <mat-radio-group formControlName="gender" aria-label="Select an option">
-        <mat-radio-button value="male">Male</mat-radio-button>
-        <mat-radio-button value="female">Female</mat-radio-button>
+      <mat-radio-group formControlName="isManager" aria-label="Select an option">
+        <mat-radio-button [value]="true">Manager</mat-radio-button>
+        <mat-radio-button [value]="false">Resident</mat-radio-button>
       </mat-radio-group>
       <div>
         <button mat-raised-button color="primary">Submit</button>
