--- a/VillageUI/src/app/app.component.html
+++ b/VillageUI/src/app/app.component.html
@@ -7,7 +7,7 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- class="content" style="width: 100%; display: block;" role="main" -->
-<div >
+<div class="custom-padding">
   <span style="width: 100%; display: flexbox;">
   <a mat-button color="primary" routerLink="all-houses">Home</a>
   <a mat-button routerLink="login">Login</a>
