--- a/VillageUI/src/app/components/apartment/apartment.component.html
+++ b/VillageUI/src/app/components/apartment/apartment.component.html
@@ -8,6 +8,34 @@
   <tbody>
     <tr>
       <td>
+
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#createInhabitanttInsideApartmen"
+  (click)="initNewInhabitant()">
+  Add inhabitant to this house
+</button>
+
+<!-- createInhabitanttInsideApartmen Modal Window-->
+<div class="modal fade" id="createInhabitanttInsideApartmen" tabindex="-1" aria-labelledby="createInhabitanttInsideApartmenLabel"
+  aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="createInhabitanttInsideApartmenLabel">New Inhabitant Creation Window</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <app-edit-inhabitant [inhabitant]="inhabitantToEdit"
+          (inhabitantUpdated)="updateOneInhabitant($event)"></app-edit-inhabitant>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="card mb-3" style="max-width: 540px;">
   <style>
     hr.rounded {
