--- a/VillageUI/src/app/components/edit-inhabitant/edit-inhabitant.component.html
+++ b/VillageUI/src/app/components/edit-inhabitant/edit-inhabitant.component.html
@@ -12,7 +12,7 @@
     <input [(ngModel)]="inhabitant.personalCode" placeholder="Personal Code" />
   </div>
   <div>
-    Date Of Birth:
+    Date Of Birth: <p style="font-size: 9px;">yyyy-mm-dd</p>
     <input [(ngModel)]="inhabitant.dateOfBirth" placeholder="Date Of Birth" />
   </div>
   <div>
@@ -27,13 +27,19 @@
       Id Of Apartment:
       <input [(ngModel)]="inhabitant.idOfApartment" placeholder="Id Of Apartment" />
     </div>
-    <div>
+    <!-- <div>
       Is Owner:
       <input [(ngModel)]="inhabitant.isOwner" placeholder="Is Owner" />
+    </div> -->
+    <div>
+      Is Owner: 
+      <input type="checkbox" [(ngModel)]="inhabitant.isOwner" (change)="toggleIsOwner()" />
+      {{isOwner}}
     </div>
   <span style="display: flex; justify-content: space-between">
   <button type="button" class="btn btn-primary" (click)="updateInhabitant(inhabitant)" *ngIf="inhabitant.id">Save changes</button>
-  
+  <button *ngIf="theApartmentId && !inhabitant.id" type="button" class="btn btn-outline-success"
+    (click)="createInhabitantAndApartmentInhabitant(inhabitant, theApartmentId)">Create</button>
   <dialog #deleteButton>
     <div>
       Are you sure you want to delete Inhabitant {{inhabitant.name}}
