add deleteInhabitantAndApartmentInhabitantDTOs to frontend

--- a/VillageUI/src/app/components/edit-inhabitant/edit-inhabitant.component.html
+++ b/VillageUI/src/app/components/edit-inhabitant/edit-inhabitant.component.html
@@ -48,7 +48,7 @@
       <button (click)="deleteButton.close()" class="btn btn-success">
         CANCEL
       </button>
-      <button (click)="deleteInhabitant(inhabitant)" *ngIf="inhabitant.id" (click)="deleteButton.close()"
+      <button (click)="deleteInhabitantAndApartmentInhabitant(inhabitant)" *ngIf="inhabitant.id" (click)="deleteButton.close()"
         class="btn btn-danger">Delete</button>
     </span>
 
