Add access table in About page.

--- a/VillageUI/src/app/components/about/about.component.html
+++ b/VillageUI/src/app/components/about/about.component.html
@@ -30,7 +30,63 @@
   <h3>Feature 4: Authentication</h3>
   <p>Implemented OAuth 2.0 authentication to allow users to log in with different roles: Manager and Resident. Different
     information will be visible based on the role.</p>
-
+<!--  -->
+<table class="tg">
+  <thead>
+    <tr>
+      <th class="tg-0lax"></th>
+      <th class="tg-amwm" colspan="4">Manager</th>
+      <th class="tg-amwm" colspan="4">Resident</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td class="tg-0lax"></td>
+      <td class="tg-0lax">Create</td>
+      <td class="tg-0lax">Update</td>
+      <td class="tg-0lax">Read</td>
+      <td class="tg-0lax">Delete</td>
+      <td class="tg-0lax">Create</td>
+      <td class="tg-0lax">Update</td>
+      <td class="tg-0lax">Read</td>
+      <td class="tg-0lax">Delete</td>
+    </tr>
+    <tr>
+      <td class="tg-0lax">House</td>
+      <td class="tg-0lax">+</td>
+      <td class="tg-0lax">+</td>
+      <td class="tg-0lax">+</td>
+      <td class="tg-0lax">+</td>
+      <td class="tg-0lax">-</td>
+      <td class="tg-0lax">-</td>
+      <td class="tg-0lax">+</td>
+      <td class="tg-0lax">-</td>
+    </tr>
+    <tr>
+      <td class="tg-0lax">Apartment</td>
+      <td class="tg-0lax">+</td>
+      <td class="tg-0lax">+</td>
+      <td class="tg-0lax">+</td>
+      <td class="tg-0lax">+</td>
+      <td class="tg-0lax">-</td>
+      <td class="tg-0lax">-</td>
+      <td class="tg-0lax">+</td>
+      <td class="tg-0lax">-</td>
+    </tr>
+    <tr>
+      <td class="tg-0lax">Resident</td>
+      <td class="tg-0lax">+</td>
+      <td class="tg-0lax">+</td>
+      <td class="tg-0lax">+</td>
+      <td class="tg-0lax">+</td>
+      <td class="tg-0lax">-</td>
+      <td class="tg-0lax">+</td>
+      <td class="tg-0lax">+</td>
+      <td class="tg-0lax">-</td>
+    </tr>
+  </tbody>
+</table>
+<!--  -->
   <h3>Contact Information</h3>
   <p>Connect with us on social media:</p>
   <ul>
