--- a/VillageUI/src/app/components/apartment/apartment.component.html
+++ b/VillageUI/src/app/components/apartment/apartment.component.html
@@ -12,7 +12,7 @@
 <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#createInhabitanttInsideApartmen"
   (click)="initNewInhabitant()">
-  Add inhabitant to this house
+  Add inhabitant to this apartment
 </button>
 
 <!-- createInhabitanttInsideApartmen Modal Window-->
