--- a/VillageUI/src/app/components/edit-inhabitant/edit-inhabitant.component.html
+++ b/VillageUI/src/app/components/edit-inhabitant/edit-inhabitant.component.html
@@ -12,7 +12,7 @@
     <input [(ngModel)]="inhabitant.personalCode" placeholder="Personal Code" />
   </div>
   <div>
-    Date Of Birth: <p style="font-size: 9px;">yyyy-mm-dd</p>
+    Date Of Birth: <p style="font-size: 9px;">( yyyy-mm-dd )</p>
     <input [(ngModel)]="inhabitant.dateOfBirth" placeholder="Date Of Birth" />
   </div>
   <div>
