--- a/VillageUI/src/app/app.component.html
+++ b/VillageUI/src/app/app.component.html
@@ -10,7 +10,7 @@
 <div class="custom-padding">
   <span style="width: 100%; display: flexbox;">
   <a mat-button color="primary" routerLink="all-houses">Home</a>
-  <a mat-button routerLink="login">Login</a>
+  <a mat-button *ngIf="!isUserLogedIn" routerLink="login">Login</a>
   <a mat-button routerLink="register">Register</a>
   <a mat-button routerLink="about">About</a>
   <a mat-raised-button color="warn" routerLink="login" style="float: right;">Logout</a>
